<resources>
    <string name="app_name" translatable="false">WeatherApp</string>
    <string name="temperature">Temperature: %d C°</string>
    <string name="humidity">Humidity: %d %%</string>
    <string name="cloudiness">Cloudiness: %s</string>
    <string name="enter_town">Enter town…</string>
    <string name="weather">Weather</string>
    <string name="show_humidity">Show humidity</string>
    <string name="show_cloudiness">Show cloudiness</string>
    <string name="show_button">show</string>
    <string name="about">About</string>
    <string name="crafted_by_dellirium" translatable="false">Crafted by Dellirium</string>
    <string name="back">Back</string>
    <string name="weather_now">Weather now</string>
    <string name="temperature_now">Temperature now:</string>
    <string name="humidity_now">Humidity now:</string>

    <string-array name="Cities">
        <item>Moscow</item>
        <item>St. Petersburg</item>
        <item>Ekaterinburg</item>
        <item>Novosibirsk</item>
        <item>Samara</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="information">Information</string>
    <string name="error">Error</string>
</resources>
